# yolo-model

./: .gitignore  README.md
implementation/: CMakeLists.txt
implementation/include/yolo/: ConvLayer.hpp  FullyConnectedLayer.hpp  Layer.hpp  PoolLayer.hpp  YoloV1Model.hpp  yolo.hpp
implementation/src/: ConvLayer.cpp  FullyConnectedLayer.cpp  PoolLayer.cpp  YoloV1Model.cpp
implementation/test/: CMakeLists.txt  test_convolution.cpp  test_fully_connected.cpp  test_pooling.cpp  test_yolov1_model.cpp
inference/: CMakeLists.txt
inference/include/: image-detection.hpp
inference/src/: image-detection.cpp  live-detection.cpp  object-detection.cpp
